--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To-do list web application",
   "main": "app.js",
   "scripts": {
-	"start": "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/ferb96/bucketlist#readme",
   "dependencies": {
-    "express": "^4.15.4"
+    "body-parser": "^1.18.2",
+    "express": "^4.15.4",
+    "mongoose": "^4.11.12"
   },
   "devDependencies": {
     "mocha": "^3.5.3"
