--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/ferb96/bucketlist#readme",
   "dependencies": {
+    "angular": "^1.6.6",
+    "angular-route": "^1.6.6",
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
     "mongoose": "^4.11.12"
   },
   "devDependencies": {
